2009-01-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fraction.spad.pamphlet: Improve reducedSystem
	(build smaller systems).

2009-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op2.boot: getDcForm(): Workaround to
	correctly format 'reduce'.

2009-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op2.boot, src/interp/compiler.boot: Do not
	set $badStack in browser.

2009-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix issue 440 and 442.
	* src/algebra/integrat.spad.pamphlet: integrate(): Go
	complex for complex base ring.
	
2009-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad.pamphlet: integrate(): Partial
	fix for issue 436.

2009-01-14  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet: fix inaccuracy in
	homogeneousPart, select only lists without common factor

	* src/algebra/mantepse.spad.pamphlet,
	src/input/mantepse.input.pamphlet: proper definition of
	homogeneous, add test

2009-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Handle tan/atan of
	constants in normalize.

2009-01-13  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/mantepse.input.pamphlet: test guessing facility
	src/input/Makefile.in: Adjust.

2009-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix issue 441.
	* src/algebra/defintrf.spad.pamphlet: findRealZero(): Remove
	multiple zeros.

2009-01-13  Martin Rubey  <martin.rubey@univie.ac.at>
	
	* src/input/bugs2009.input.pamphlet: add issue #442

	* src/input/bugs2009.input.pamphlet: add issues #138, #439, #436,
	#360, #440, #441

	* src/input/elemnum.input.pamphlet: add reference

	* src/input/bugs2008.input.pamphlet: correct test #301, add
	expected(), fix some formatting.

2008-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Better normalization.
	src/input/bugs2009.input.pamphlet: New file.