@@ -1,5 +1,10 @@
 2009-01-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp: Allow
+	build even if Clisp lacks FFI.
+
+2009-01-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/fraction.spad.pamphlet: Improve reducedSystem
 	(build smaller systems).
 
